tests/good/index.lat
class Node {
    int v;
    //int g;
    int z(int a) {return a+2;}
   // string lol() {return "x";}
}

int main() {
    printString(typename (new Node()).z);
    return 0;
}