tests/bad/string_plus_int.lat
int main() {
    1 + "";
    return 0;
}
